# tojalgrad_core

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  library.h
include/tojalgrad/nn/: Activation.h  Loss.h  Model.h  Neuron.h
include/tojalgrad/nn/layers/: Dense.h  Layer.h  Linear.h
include/tojalgrad/nn/models/: BobNet.h  Model.h
src/nn/: Activation.cpp  Loss.cpp  Model.cpp  Neuron.cpp
src/nn/layers/: Dense.cpp  Layer.cpp  Linear.cpp
src/nn/models/: BobNet.cpp  Model.cpp
test/: LayerTests.cpp  LossTests.cpp  ModelTests.cpp  NeuronActivationTests.cpp  NeuronTests.cpp  NeuronTrainingTests.cpp
